lib/ffi/generated_bindings.dart


  late final _BASS_RecordGetInputPtr = _lookup<
      ffi.NativeFunction<
          DWORD Function(
              ffi.Int32, ffi.Pointer<ffi.Float>)>>('BASS_RecordGetInput');
  late final _BASS_RecordGetInput = _BASS_RecordGetInputPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Float>)>();

  int BASS_RecordStart(
    int freq,
    int chans,
    int flags,
    ffi.Pointer<RECORDPROC> proc,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _BASS_RecordStart(
      freq,
      chans,
      flags,
      proc,
      user,
    );
  }

  late final _BASS_RecordStartPtr = _lookup<
      ffi.NativeFunction<
          HRECORD Function(DWORD, DWORD, DWORD, ffi.Pointer<RECORDPROC>,
              ffi.Pointer<ffi.Void>)>>('BASS_RecordStart');
  late final _BASS_RecordStart = _BASS_RecordStartPtr.asFunction<
      int Function(
          int, int, int, ffi.Pointer<RECORDPROC>, ffi.Pointer<ffi.Void>)>();

  double BASS_ChannelBytes2Seconds(
    int handle,
    int pos,
  ) {
    return _BASS_ChannelBytes2Seconds(
      handle,
      pos,
    );
  }

  late final _BASS_ChannelBytes2SecondsPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(DWORD, QWORD)>>(
          'BASS_ChannelBytes2Seconds');
  late final _BASS_ChannelBytes2Seconds =
      _BASS_ChannelBytes2SecondsPtr.asFunction<double Function(int, int)>();

  int BASS_ChannelSeconds2Bytes(
    int handle,
    double pos,
  ) {
    return _BASS_ChannelSeconds2Bytes(
      handle,
      pos,
    );
  }

  late final _BASS_ChannelSeconds2BytesPtr =
      _lookup<ffi.NativeFunction<QWORD Function(DWORD, ffi.Double)>>(
          'BASS_ChannelSeconds2Bytes');
  late final _BASS_ChannelSeconds2Bytes =
      _BASS_ChannelSeconds2BytesPtr.asFunction<int Function(int, double)>();

  int BASS_ChannelGetDevice(
    int handle,
  ) {
    return _BASS_ChannelGetDevice(
      handle,
    );
  }

  late final _BASS_ChannelGetDevicePtr =
      _lookup<ffi.NativeFunction<DWORD Function(DWORD)>>(
          'BASS_ChannelGetDevice');
  late final _BASS_ChannelGetDevice =
      _BASS_ChannelGetDevicePtr.asFunction<int Function(int)>();

  int BASS_ChannelSetDevice(
    int handle,
    int device,
  ) {
    return _BASS_ChannelSetDevice(
      handle,
      device,
    );
  }

  late final _BASS_ChannelSetDevicePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_ChannelSetDevice');
  late final _BASS_ChannelSetDevice =
      _BASS_ChannelSetDevicePtr.asFunction<int Function(int, int)>();

  int BASS_ChannelIsActive(
    int handle,
  ) {
    return _BASS_ChannelIsActive(
      handle,
    );
  }

  late final _BASS_ChannelIsActivePtr =
      _lookup<ffi.NativeFunction<DWORD Function(DWORD)>>(
          'BASS_ChannelIsActive');
  late final _BASS_ChannelIsActive =
      _BASS_ChannelIsActivePtr.asFunction<int Function(int)>();

  int BASS_ChannelGetInfo(
    int handle,
    ffi.Pointer<BASS_CHANNELINFO> info,
  ) {
    return _BASS_ChannelGetInfo(
      handle,
      info,
    );
  }

  late final _BASS_ChannelGetInfoPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              DWORD, ffi.Pointer<BASS_CHANNELINFO>)>>('BASS_ChannelGetInfo');
  late final _BASS_ChannelGetInfo = _BASS_ChannelGetInfoPtr.asFunction<
      int Function(int, ffi.Pointer<BASS_CHANNELINFO>)>();

  ffi.Pointer<ffi.Int8> BASS_ChannelGetTags(
    int handle,
    int tags,
  ) {
    return _BASS_ChannelGetTags(
      handle,
      tags,
    );
  }

  late final _BASS_ChannelGetTagsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(DWORD, DWORD)>>(
          'BASS_ChannelGetTags');
  late final _BASS_ChannelGetTags = _BASS_ChannelGetTagsPtr.asFunction<
      ffi.Pointer<ffi.Int8> Function(int, int)>();

  int BASS_ChannelFlags(
    int handle,
    int flags,
    int mask,
  ) {
    return _BASS_ChannelFlags(
      handle,
      flags,
      mask,
    );
  }

  late final _BASS_ChannelFlagsPtr =
      _lookup<ffi.NativeFunction<DWORD Function(DWORD, DWORD, DWORD)>>(
          'BASS_ChannelFlags');
  late final _BASS_ChannelFlags =
      _BASS_ChannelFlagsPtr.asFunction<int Function(int, int, int)>();

  int BASS_ChannelLock(
    int handle,
    int lock,
  ) {
    return _BASS_ChannelLock(
      handle,
      lock,
    );
  }

  late final _BASS_ChannelLockPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, BOOL)>>(
          'BASS_ChannelLock');
  late final _BASS_ChannelLock =
      _BASS_ChannelLockPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelFree(
    int handle,
  ) {
    return _BASS_ChannelFree(
      handle,
    );
  }

  late final _BASS_ChannelFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_ChannelFree');
  late final _BASS_ChannelFree =
      _BASS_ChannelFreePtr.asFunction<int Function(int)>();

  int BASS_ChannelPlay(
    int handle,
    int restart,
  ) {
    return _BASS_ChannelPlay(
      handle,
      restart,
    );
  }

  late final _BASS_ChannelPlayPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, BOOL)>>(
          'BASS_ChannelPlay');
  late final _BASS_ChannelPlay =
      _BASS_ChannelPlayPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelStop(
    int handle,
  ) {
    return _BASS_ChannelStop(
      handle,
    );
  }

  late final _BASS_ChannelStopPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_ChannelStop');
  late final _BASS_ChannelStop =
      _BASS_ChannelStopPtr.asFunction<int Function(int)>();

  int BASS_ChannelPause(
    int handle,
  ) {
    return _BASS_ChannelPause(
      handle,
    );
  }

  late final _BASS_ChannelPausePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_ChannelPause');
  late final _BASS_ChannelPause =
      _BASS_ChannelPausePtr.asFunction<int Function(int)>();

  int BASS_ChannelUpdate(
    int handle,
    int length,
  ) {
    return _BASS_ChannelUpdate(
      handle,
      length,
    );
  }

  late final _BASS_ChannelUpdatePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_ChannelUpdate');
  late final _BASS_ChannelUpdate =
      _BASS_ChannelUpdatePtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetAttribute(
    int handle,
    int attrib,
    double value,
  ) {
    return _BASS_ChannelSetAttribute(
      handle,
      attrib,
      value,
    );
  }

  late final _BASS_ChannelSetAttributePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD, ffi.Float)>>(
          'BASS_ChannelSetAttribute');
  late final _BASS_ChannelSetAttribute =
      _BASS_ChannelSetAttributePtr.asFunction<int Function(int, int, double)>();

  int BASS_ChannelGetAttribute(
    int handle,
    int attrib,
    ffi.Pointer<ffi.Float> value,
  ) {
    return _BASS_ChannelGetAttribute(
      handle,
      attrib,
      value,
    );
  }

  late final _BASS_ChannelGetAttributePtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(DWORD, DWORD,
              ffi.Pointer<ffi.Float>)>>('BASS_ChannelGetAttribute');
  late final _BASS_ChannelGetAttribute = _BASS_ChannelGetAttributePtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Float>)>();

  int BASS_ChannelSlideAttribute(
    int handle,
    int attrib,
    double value,
    int time,
  ) {
    return _BASS_ChannelSlideAttribute(
      handle,
      attrib,
      value,
      time,
    );
  }

  late final _BASS_ChannelSlideAttributePtr = _lookup<
          ffi.NativeFunction<BOOL Function(DWORD, DWORD, ffi.Float, DWORD)>>(
      'BASS_ChannelSlideAttribute');
  late final _BASS_ChannelSlideAttribute = _BASS_ChannelSlideAttributePtr
      .asFunction<int Function(int, int, double, int)>();

  int BASS_ChannelIsSliding(
    int handle,
    int attrib,
  ) {
    return _BASS_ChannelIsSliding(
      handle,
      attrib,
    );
  }

  late final _BASS_ChannelIsSlidingPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_ChannelIsSliding');
  late final _BASS_ChannelIsSliding =
      _BASS_ChannelIsSlidingPtr.asFunction<int Function(int, int)>();

  int BASS_ChannelSetAttributeEx(
    int handle,
    int attrib,
    ffi.Pointer<ffi.Void> value,
    int size,
  ) {
    return _BASS_ChannelSetAttributeEx(
      handle,
      attrib,
      value,
      size,
    );
  }

  late final _BASS_ChannelSetAttributeExPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(DWORD, DWORD, ffi.Pointer<ffi.Void>,
              DWORD)>>('BASS_ChannelSetAttributeEx');
  late final _BASS_ChannelSetAttributeEx = _BASS_ChannelSetAttributeExPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Void>, int)>();

  int BASS_ChannelGetAttributeEx(
    int handle,
    int attrib,
    ffi.Pointer<ffi.Void> value,
    int size,
  ) {
    return _BASS_ChannelGetAttributeEx(
      handle,
      attrib,
      value,
      size,
    );
  }

  late final _BASS_ChannelGetAttributeExPtr = _lookup<
      ffi.NativeFunction<
          DWORD Function(DWORD, DWORD, ffi.Pointer<ffi.Void>,
              DWORD)>>('BASS_ChannelGetAttributeEx');
  late final _BASS_ChannelGetAttributeEx = _BASS_ChannelGetAttributeExPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Void>, int)>();

  int BASS_ChannelSet3DAttributes(
    int handle,
    int mode,
    double min,
    double max,
    int iangle,
    int oangle,
    double outvol,
  ) {
    return _BASS_ChannelSet3DAttributes(
      handle,
      mode,
      min,
      max,
      iangle,
      oangle,
      outvol,
    );
  }

  late final _BASS_ChannelSet3DAttributesPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(DWORD, ffi.Int32, ffi.Float, ffi.Float, ffi.Int32,
              ffi.Int32, ffi.Float)>>('BASS_ChannelSet3DAttributes');
  late final _BASS_ChannelSet3DAttributes = _BASS_ChannelSet3DAttributesPtr
      .asFunction<int Function(int, int, double, double, int, int, double)>();

  int BASS_ChannelGet3DAttributes(
    int handle,
    ffi.Pointer<DWORD> mode,
    ffi.Pointer<ffi.Float> min,
    ffi.Pointer<ffi.Float> max,
    ffi.Pointer<DWORD> iangle,
    ffi.Pointer<DWORD> oangle,
    ffi.Pointer<ffi.Float> outvol,
  ) {
    return _BASS_ChannelGet3DAttributes(
      handle,
      mode,
      min,
      max,
      iangle,
      oangle,
      outvol,
    );
  }

  late final _BASS_ChannelGet3DAttributesPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              DWORD,
              ffi.Pointer<DWORD>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<DWORD>,
              ffi.Pointer<DWORD>,
              ffi.Pointer<ffi.Float>)>>('BASS_ChannelGet3DAttributes');
  late final _BASS_ChannelGet3DAttributes =
      _BASS_ChannelGet3DAttributesPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<DWORD>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<DWORD>,
              ffi.Pointer<DWORD>,
              ffi.Pointer<ffi.Float>)>();

  int BASS_ChannelSet3DPosition(
    int handle,
    ffi.Pointer<BASS_3DVECTOR> pos,
    ffi.Pointer<BASS_3DVECTOR> orient,
    ffi.Pointer<BASS_3DVECTOR> vel,
  ) {
    return _BASS_ChannelSet3DPosition(
      handle,
      pos,
      orient,
      vel,
    );
  }

  late final _BASS_ChannelSet3DPositionPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              DWORD,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>)>>('BASS_ChannelSet3DPosition');
  late final _BASS_ChannelSet3DPosition =
      _BASS_ChannelSet3DPositionPtr.asFunction<
          int Function(int, ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>)>();
